Add: link to forgot password option

--- a/week_06/day02_html&css/loginform/index.html
+++ b/week_06/day02_html&css/loginform/index.html
@@ -19,11 +19,11 @@
             <input type="text" name="usrname" autofocus required>
             <label for="psw">PASSWORD</label>
             <input type="password" name="psw" required>
-            <span class="psw"><a href="#">Forgot password?</a></span>
+            <span class="psw"><a href="https://google.com">Forgot password?</a></span>
             <button type="submit">Login</button>
 
         </form>
-        
+
     </div>
 
   </body>
