--- a/week_06/day03_webshop_project/index.html
+++ b/week_06/day03_webshop_project/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
   <head>
-    <title>Login page</title>
+    <title>Webshopka</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
   </head>
